// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThirdPage component should render correctly With default props 1`] = `
<div
  className="page"
>
  <ul>
    <li>
      <Link
        replace={true}
        to="/1"
      >
        1
      </Link>
    </li>
    <li>
      <Link
        replace={true}
        to="/2"
      >
        2
      </Link>
    </li>
    <li>
      <Link
        replace={true}
        to="/not-found"
      >
        4
      </Link>
    </li>
  </ul>
</div>
`;

exports[`ThirdPage component should render correctly With text prop 1`] = `
<div
  className="page"
>
  text
  <ul>
    <li>
      <Link
        replace={true}
        to="/1"
      >
        1
      </Link>
    </li>
    <li>
      <Link
        replace={true}
        to="/2"
      >
        2
      </Link>
    </li>
    <li>
      <Link
        replace={true}
        to="/not-found"
      >
        4
      </Link>
    </li>
  </ul>
</div>
`;
